--- a/app/src/main/res/layout/kartice_elementi.xml
+++ b/app/src/main/res/layout/kartice_elementi.xml
@@ -15,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/slika1">
+            android:contentDescription="@string/zanr_filma"
+            android:src="@drawable/defaultslika">
         </ImageView>
         <TextView
             android:id="@+id/movieTitle"
