--- a/app/src/main/res/layout/kartice_elementi.xml
+++ b/app/src/main/res/layout/kartice_elementi.xml
@@ -5,7 +5,8 @@
     android:layout_height="172dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginEnd="8dp"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="4dp"
+    app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
