--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -133,6 +133,30 @@
 
             </FrameLayout>
 
+            <Button
+                android:id="@+id/favorites"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="36dp"
+                android:backgroundTint="@color/highlightColor"
+                android:text="Add to favorites"
+                app:layout_constraintEnd_toEndOf="@+id/movie_backdrop"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:backgroundTint="@color/highlightColor"
+                android:text="Delete from favorites"
+                app:layout_constraintEnd_toEndOf="@+id/movie_backdrop"
+                app:layout_constraintTop_toTopOf="parent"
+
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
