--- a/app/src/main/res/menu/navigation_movie_detail.xml
+++ b/app/src/main/res/menu/navigation_movie_detail.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navForDetails_list_of_actors"
+        android:id="@+id/actorsItem"
         android:title="Actors"/>
     <item
-        android:id="@+id/navForDetails_similar_movies"
+        android:id="@+id/similarMItem"
         android:title="Similar movies"/>
 </menu>
 
